# aulastep

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  aulastep-authoring-3.skill  package-lock.json  package.json  playwright.config.js  pyproject.toml  rutas-relativas-recursos.patch
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: pages.yml
docs/: aulawork.md  correccion.md  formato-actividad.md  temas.md
examples/dhcp-kea/: actividad.yml
examples/dhcp-kea/pasos/: 01-presentacion.md  02-red-servidor.md  03-instalacion-kea.md  04-configuracion-ambito.md  05-arranque-servicio.md  06-prueba-cliente.md  07-entrega.md
examples/dhcp-kea/recursos/: README.md  kea-dhcp4-base.conf
schemas/: actividad.schema.json  manifest-aulawork.schema.json
scripts/: build_skill.sh
skill/aulastep-authoring/: SKILL.md
skill/aulastep-authoring/references/: directivas.md  formato.md
src/aulastep/: __init__.py  branding.py  cli.py  compiler.py  directives.py  discovery.py  errors.py  frontmatter.py  grading.py  markdown.py  models.py  preview.py  project.py  publish.py  scaffold.py
src/aulastep/player/assets/: app.js  directives.js  evidence.js  import-export.js  navigation.js  storage.js  styles.css  themes.css  (+1 more)
src/aulastep/templates/: grade-report.html.j2  index.html.j2  publish-index.html.j2
tests/e2e/: actividad.spec.js
tests/frontend/: import-export.test.js  navigation.test.js  storage.test.js
tests/python/: conftest.py  test_compiler.py  test_directives.py  test_discovery.py  test_grading.py  test_project.py  test_publish.py
