[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aulastep"
version = "0.1.0"
description = "Generador de actividades educativas guiadas: Markdown a aplicación web estática (HTML5/CSS/JS)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ayaya" }]
requires-python = ">=3.12"
keywords = ["educacion", "markdown", "static-site", "formacion-profesional"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "jinja2>=3.1",
    "rich>=13.7",
    "watchfiles>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
aulastep = "aulastep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aulastep"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests/python"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src/aulastep"]

[[tool.mypy.overrides]]
module = ["mdit_py_plugins.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-q"
